# dynamic_routing_analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  python-test.yml
notebooks/: CCA_by_claude.ipynb  CCA_cross_session.ipynb  LP_decoder_accuracy_csv.ipynb  LP_decoder_confidence_csv.ipynb  analyze_block_shuffling_for_decision_function.ipynb  analyze_block_shuffling_for_decoding.ipynb  append_surface_channel_metrics.ipynb  area_boundary_metrics.ipynb  baseline_context_cross_correlation_LDA.ipynb  baseline_context_offset_vs_sensory_responses.ipynb  blockwise_correlate_predict_proba_across_structures.ipynb  calculate_variance_explained_by_decoder.ipynb  ccf_widget.ipynb  check_surface_channels.ipynb  compare_context_dimension_across_decoders.ipynb  compare_context_lick_stimulus_decoding_trialwise.ipynb  compare_crossval_strategies.ipynb  compare_decoder_acccuracy_across_regularization.ipynb  compare_decoder_accuracy_across_drift_metrics.ipynb  compare_decoder_accuracy_across_timebin_size.ipynb  compare_decoder_coefs_across_timebins.ipynb  compare_decoder_models.ipynb  compare_decoder_runs.ipynb  compare_decoding_context_licks_baseline_subtract.ipynb  compare_ibl_unit_metrics.ipynb  compare_latency_of_decoding_context.ipynb  compare_predict_proba_vs_time_since_informative_trial.ipynb  compute_decoder_coef_correlation_across_timebins.ipynb  compute_metrics_for_alignment.ipynb  compute_predict_proba_correlation_across_areas_timepoints.ipynb  compute_predict_proba_residuals.ipynb  compute_projections_onto_context_axis.ipynb  compute_single_unit_metrics.ipynb  correlate_baseline_stim_context_representation.ipynb  correlate_neural_and_face_predict_proba.ipynb  correlate_population_baseline_vs_stim_context_modulation.ipynb  correlate_predict_proba_across_structures.ipynb  correlate_predict_proba_multi_timebin.ipynb  correlate_task_variables.ipynb  cross_context_decoding.ipynb  (+76 more)
scripts/: install.bat  install.sh  run_decoding.py  run_encoding_capsule.py  update.bat  update.sh  update_sessions_table.py
src/dynamic_routing_analysis/: __init__.py  acronym_counts.py  analysis_utils_glm.py  ccf_utils.py  codeocean_utils.py  data_utils.py  datacube_utils.py  decoding_utils.py  function.py  glm_utils.py  io_utils.py  logging_utils.py  models.py  path_utils.py  plot_utils.py  spike_utils.py  utils.py
tests/: test_package.py
