[project]
name = "dynamic_routing_analysis"
version = "0.1.1"
description = "Tools for accessing, processing and presenting data from Dynamic Routing experiments."
authors = [
    { name = "Ben Hardcastle", email = "ben.hardcastle@alleninstitute.org" },
    { name = "Ethan McBride", email = "ethan.mcbride@alleninstitute.org" },
]
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "matplotlib>=3.7.2",
    "pynwb>=2.3.3",
    "nwbwidgets>=0.11.3",
    "fsspec>=2023.6.0",
    "s3fs>=2023.6.0",
    "universal-pathlib>=0.0.24",
    "npc-lims>=0.1.0",
    "npc-sessions>=0.0.226",
    "xarray>=2024.6.0",
    "scikit-learn>=1.5.1",
    "statsmodels>=0.14.2",
    "rasterio>=1.4.2",
    "shapely>=2.0.6",
    "geopandas>=1.0.1",
    "altair[all]>=5.4.1",
]
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.license]
text = "MIT"

[project.urls]
Repository = "https://github.com/AllenInstitute/dynamic_routing_analysis"
Issues = "https://github.com/AllenInstitute/dynamic_routing_analysis/issues"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.0.282",
    "pdm-bump>=0.7.3",
    "mypy>=1.4.1",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
]

[tool.pdm.scripts]
ruff = "ruff check src --fix-only"
black = "black src"
test = "pytest --cov"
mypy = "mypy src"
bumpver = "pdm bump micro"
tag = "pdm bump tag"

[tool.pdm.scripts.prebuild]
composite = [
    "black",
    "ruff",
    "test",
    "mypy",
]

[tool.pdm.scripts.dryrun]
composite = [
    "prebuild",
    "pdm publish --repository testpypi",
]

[tool.pdm.scripts.pub]
composite = [
    "prebuild",
    "bumpver",
    "pdm publish",
]

[tool.ruff]
fix = true
ignore-init-module-imports = true
select = [
    "ANN",
    "B",
    "C",
    "E",
    "F",
    "I",
    "RUF100",
    "N",
    "U",
    "W",
    "YTT",
]
extend-exclude = [
    "tests",
]
src = [
    "src",
    "tests",
]
target-version = "py39"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
    "--ignore-glob=*scripts*,*examples*",
    "--doctest-glob=*README.md",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
testpaths = [
    ".",
    "tests",
    "src",
]

[tool.coverage.paths]
source = [
    "src",
]

[tool.coverage.run]
branch = true
source = [
    "src",
]
omit = [
    "*__init__*",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
skip_empty = true
exclude_also = [
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc.)?abstractmethod",
    "@typing.runtime_checkable",
]

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"
